# pyqt-demo

./: main.py  pyproject.toml
.github/workflows/: windows.yml
